# Pulsar-Native

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  .scratch.rs  .theme-schema.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  EasyRun.py  GETTING-A-BLANK-PROJECT.md  INSTRUMENTATION-PROFILING-COMPLETE.md  LEVEL_EDITOR_TRANSLATIONS.md  LEVEL_FILE_TYPE_REGISTRATION.md  LOGGING_MIGRATION.md  MEMORY_LEAK_DETECTION.md  MENU_TRANSLATION_COMPLETE.md  PLUGIN_ARCHITECTURE.md  PLUGIN_IMPLEMENTATION_GUIDE.md  QUICK-START-PROFILING.md  README.md  REFACTOR_PLAN.md  SUBAGENTS_USAGE.md  TRAIT_BASED_EDITOR_SYSTEM.md  blueprint_graph_debug.json  build-with-c11.ps1  clippy.toml  composed_shader_debug.wgsl  fix_logging.sh  flake.nix  justfile  out.tree  pre-release-check.ps1  pre-release-check.sh  query_results_1765154048.json  renovate.json  rust-toolchain  rust-toolchain.toml  split_state.py  (+6 more)
.agents/: CRATES.md  (+9 more)
agent-providers/agent_chat_tools/: Cargo.toml
agent-providers/agent_chat_tools/src/: lib.rs
agent-providers/agent_provider_docker_model_runner/: Cargo.toml
agent-providers/agent_provider_docker_model_runner/src/: lib.rs
agent-providers/agent_provider_ollama/: Cargo.toml
agent-providers/agent_provider_ollama/src/: lib.rs
crates/blueprint_compiler/: Cargo.toml
crates/blueprint_compiler/src/: lib.rs  project.rs
crates/dtrace_profiler/: Cargo.toml  README.md
crates/dtrace_profiler/src/: database.rs  lib.rs  unix.rs  windows.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: appdata.rs  args.rs  assets.rs  consts.rs  discord.rs  event_loop.rs  file_association.rs  gpu_policy.rs  lib.rs  logging.rs  macos_permissions.rs  main.rs  runtime.rs
crates/engine/src/init/: graph.rs  mod.rs
crates/engine/src/settings/: engine_settings.rs  mod.rs
crates/engine/src/steps/: backend.rs  dev_detect.rs  engine_context.rs  logging.rs  runtime.rs  uri_registration.rs
crates/engine/src/uri/: commands.rs  mod.rs  parser.rs  registration.rs
crates/engine/src/window/: app.rs  app.rs.backup  events.rs  mod.rs  state.rs  window_config.rs  window_id_map.rs
crates/engine_backend/: Cargo.toml
crates/engine_backend/src/: component_registry.rs  gpu_interop.rs  lib.rs
crates/engine_backend/src/scene/: component_db.rs  hierarchy.rs  metadata.rs  metadata_db.rs  mod.rs
crates/engine_fs/: Cargo.toml  README.md
crates/engine_fs/src/: asset_registry.rs  asset_templates.rs  engine_fs.rs  events.rs  lib.rs  operations.rs  provider.rs  registry.rs  remote_provider.rs  scanner.rs  thumbnails.rs  tooling.rs  type_index.rs  virtual_fs.rs  watchers.rs
crates/engine_state/: Cargo.toml
crates/engine_state/src/: channels.rs  context.rs  discord.rs  keyed_store.rs  lib.rs  multiplayer.rs  multiuser.rs  renderers_typed.rs  resource.rs  settings.rs  settings_defaults.rs  settings_registry.rs  settings_storage.rs
crates/friends_engine/: Cargo.toml
crates/friends_engine/src/: friends_service.rs  gist_storage.rs  lib.rs  mutual_detection.rs  relay_integration.rs  types.rs
crates/helio-feature-skies/: Cargo.toml
crates/helio-feature-skies/shaders/: atmosphere_functions.wgsl  sky_atmosphere.wgsl
crates/helio-feature-skies/src/: lib.rs
crates/multiuser_host/: Cargo.toml  Dockerfile  README.md
crates/multiuser_host/src/: auth.rs  config.rs  main.rs
crates/multiuser_server/: Cargo.toml  Dockerfile  build.rs
crates/multiuser_server/examples/: simple_client.rs
crates/multiuser_server/src/: auth.rs  config.rs  http_server.rs  lib.rs  logging.rs  main.rs  metrics.rs  peer_discovery.rs  persistence.rs  relay.rs  rendezvous.rs  session.rs  session_manager.rs  simple_test_server.rs  sync_protocol.rs  telemetry.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/plugin_ai_macro/: Cargo.toml
crates/plugin_ai_macro/src/: lib.rs
crates/plugin_editor_api/: Cargo.toml  build.rs
crates/plugin_editor_api/src/: asset_payload.rs  components.rs  editor_element.rs  helpers.rs  lib.rs  plugin.rs  wasm_export.rs
crates/plugin_manager/: Cargo.toml  build.rs
crates/plugin_manager/src/: builtin.rs  lib.rs  permanent_library.rs  registry.rs  tool_bridge.rs
crates/plugin_manager/wit/: editor.wit
crates/profiling/: Cargo.toml  README.md
crates/profiling/src/: database.rs  lib.rs  macros.rs  scope.rs  utilities.rs
crates/pulsar-multiplayer-core/: Cargo.toml
crates/pulsar-multiplayer-core/src/: protocol.rs  session.rs
crates/pulsar-multiplayer-core/tests/: session_test.rs
crates/pulsar_auth/: Cargo.toml  README.md
crates/pulsar_auth/src/: lib.rs
crates/pulsar_bp_executor/: Cargo.toml
crates/pulsar_bp_executor/src/: lib.rs
crates/pulsar_bp_executor/tests/: complex_nodes.rs  executor_tests.rs  generic_nodes.rs
crates/pulsar_diagnostics/: Cargo.toml
crates/pulsar_diagnostics/src/: lib.rs
crates/pulsar_docs/: Cargo.toml  build.rs
crates/pulsar_docs/src/: lib.rs  project_parser.rs
crates/pulsar_events/: Cargo.toml
crates/pulsar_events/src/: lib.rs
crates/pulsar_game/: Cargo.toml
crates/pulsar_game/src/: actor.rs  archetype.rs  component.rs  component_store.rs  entity.rs  event.rs  freecam.rs  lib.rs  query.rs  schedule.rs  task.rs  tests.rs  tick.rs  time.rs  window.rs  windowed_app.rs  world.rs
crates/pulsar_graph/: Cargo.toml
crates/pulsar_graph/src/: lib.rs  prefab.rs  type_system.rs
crates/pulsar_lsp/: Cargo.toml
crates/pulsar_lsp/src/: lib.rs  traits.rs  types.rs
crates/pulsar_reflection/: Cargo.toml  README.md  RUNTIME_TYPES_GUIDE.md
crates/pulsar_reflection/docs/: 00-overview.md  01-getting-started.md  04-dynamic-types.md  06-custom-type-renderers.md
crates/pulsar_reflection/examples/: dynamic_types.rs  serde_primitives.rs
crates/pulsar_reflection/src/: dynamic_types.rs  json_codec.rs  json_serializer.rs  lib.rs  registry.rs  runtime_registry.rs  runtime_types.rs  type_traits.rs
crates/pulsar_reflection/tests/: adversarial_tests.rs  comprehensive_tests.rs  serde_primitives_feature_tests.rs  thread_safety_and_property_tests.rs
crates/pulsar_render/: Cargo.toml
crates/pulsar_render/src/: lib.rs  traits.rs  types.rs
(+2256 files in other folders)
