[workspace]
members = [
    "crates/*",
    "ui-crates/*",
]

default-members = ["crates/engine"]
resolver = "2"

###################################
# Profiles
###################################

[profile.release]
debug = true

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

###################################
# Workspace Dependencies
###################################

[workspace.dependencies]

# ---------- GPUI (WGPUI) ----------
gpui-ce = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "90e5e3d2ed134122d9d30555cb9310495e4de129" }

# ---------- Core Engine ----------
ui                    = { path = "crates/ui" }
gpui-component-macros = { path = "crates/macros" }
type_db               = { path = "crates/type_db" }
profiling             = { path = "crates/profiling" }
engine_fs             = { path = "crates/engine_fs" }
pulsar_std            = { path = "crates/pulsar_std" }
engine_state          = { path = "crates/engine_state" }
pulsar_settings       = { path = "crates/pulsar_settings" }
engine_backend        = { path = "crates/engine_backend" }
pulsar_diagnostics    = { path = "crates/pulsar_diagnostics" }
pulsar_lsp            = { path = "crates/pulsar_lsp" }
window_manager        = { path = "crates/window_manager" }
blueprint_compiler    = { path = "crates/blueprint_compiler" }
pulsar_graph          = { path = "crates/pulsar_graph" }
pulsar_replication    = { path = "crates/pulsar_replication" }

# ---------- UI Component Crates ----------
ui_core               = { path = "ui-crates/ui_core" }
ui_entry              = { path = "ui-crates/ui_entry" }
ui_level_editor       = { path = "ui-crates/ui_level_editor" }
ui_settings           = { path = "ui-crates/ui_settings" }
ui_multiplayer        = { path = "ui-crates/ui_multiplayer" }
ui_problems           = { path = "ui-crates/ui_problems" }
ui_flamegraph         = { path = "ui-crates/ui_flamegraph" }
ui_file_manager       = { path = "ui-crates/ui_file_manager" }
ui_common             = { path = "ui-crates/ui_common" }
ui_loading_screen     = { path = "ui-crates/ui_loading_screen" }
ui_about              = { path = "ui-crates/ui_about" }
ui_documentation      = { path = "ui-crates/ui_documentation" }
ui_types_common       = { path = "ui-crates/ui_types_common" }
ui_type_debugger      = { path = "ui-crates/ui_type_debugger" }
ui_plugin_manager     = { path = "ui-crates/ui_plugin_manager" }
ui_log_viewer         = { path = "ui-crates/ui_log_viewer" }
ui_git_manager        = { path = "ui-crates/ui_git_manager" }
ui_fab_search         = { path = "ui-crates/ui_fab_search" }

# ---------- Plugin System ----------
plugin_editor_api = { path = "crates/plugin_editor_api"}
plugin_manager    = { path = "crates/plugin_manager" }

# ---------- Helio Renderer (wgpu-based) ----------
helio = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "4e1d8ea4471855452f6e8ff7921cf0790eb03a4f" }
glam           = { version = "0.29", features = ["bytemuck"] }

# ---------- PulsarConfig ----------
pulsar-config = { git = "https://github.com/Far-Beyond-Pulsar/PulsarConfig", rev = "78a332cc59e82db5dc4d7b26c920b0ac7a703102" }

# ---------- Installer ----------
# Local rustup fork used as a library to drive platform-native Rust installation.
# curl-backend disabled: reqwest-native-tls is sufficient and avoids the curl C dep.
rustup = { git = "https://github.com/tristanpoland/rustup", default-features = false, features = ["reqwest-native-tls"] }

# ---------- Third-party ----------
wgpu = { git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8" }
anyhow = "1.0.100"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.149"
schemars = "1.2.0"
smallvec = "1.15.1"
image = { version = "0.25.9", default-features = false, features = ["png"] }
rust-i18n = "3.1.5"
raw-window-handle = "0.6.2"
winit = "0.30.12"
smol = "1.3.0"
tracing = "0.1.44"
notify = "8.2.0"
lsp-types = "0.97.0"
directories = "6.0.0"
itertools = "0.14.0"
rapier3d = { version = "0.32.0", features = ["simd-stable"] }
sysuri = "0.4.0"
urlencoding = "2.1.3"
ropey = { version = "=2.0.0-beta.1", features = ["metric_utf16", "metric_lines_lf"] }

###################################
# Windows-specific
###################################

windows = {version = "0.62.2",features = ["Wdk","Wdk_System","Wdk_System_SystemServices","Win32_System_Threading","Win32_System_SystemInformation","Win32_Graphics_Direct3D","Win32_Graphics_Direct3D_Fxc","Win32_Graphics_Direct3D11","Win32_Graphics_Direct3D12","Win32_Graphics_Dxgi","Win32_Graphics_Dxgi_Common","Win32_Foundation",]}

###################################
# Clippy Lints
###################################

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
manual_is_multiple_of = "allow"
type_complexity = "allow"
todo = "deny"
style = { level = "allow", priority = -1 }

###################################
# Typos
###################################

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]
