[workspace]
members = [
    "crates/*",
    "agent-providers/*",
    "ui-crates/*",
]

default-members = ["crates/engine"]
resolver = "2"

###################################
# Profiles
###################################

[profile.release]
debug = true

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

###################################
# Workspace Dependencies
###################################

[workspace.dependencies]

# ---------- GPUI (WGPUI) ----------
gpui-ce = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "53872e17a0e2f306ce4d9760ff2bdfa965b41337" }

# ---------- Core Engine ----------
ui                                 = { path = "../WGPUI-Component/crates/ui" }
gpui-component-macros              = { path = "crates/macros" }
type_db                            = { path = "crates/type_db" }
profiling                          = { path = "crates/profiling" }
engine_fs                          = { path = "crates/engine_fs" }
pulsar_std                         = { path = "crates/pulsar_std" }
engine_state                       = { path = "crates/engine_state" }
pulsar_settings                    = { path = "crates/pulsar_settings" }
engine_backend                     = { path = "crates/engine_backend" }
pulsar_diagnostics                 = { path = "crates/pulsar_diagnostics" }
pulsar_lsp                         = { path = "crates/pulsar_lsp" }
window_manager                     = { path = "crates/window_manager" }
blueprint_compiler                 = { path = "crates/blueprint_compiler" }
pulsar_graph                       = { path = "crates/pulsar_graph" }
pulsar_game                        = { path = "crates/pulsar_game" }
pulsar_replication                 = { path = "crates/pulsar_replication" }
agent_chat_core                    = { path = "agent-providers/agent_chat_core" }
agent_chat_tools                   = { path = "agent-providers/agent_chat_tools" }
agent_provider_demo_random         = { path = "agent-providers/agent_provider_demo_random" }
agent_provider_github_copilot      = { path = "agent-providers/agent_provider_github_copilot" }
agent_provider_openai              = { path = "agent-providers/agent_provider_openai" }
agent_provider_anthropic           = { path = "agent-providers/agent_provider_anthropic" }
agent_provider_openrouter          = { path = "agent-providers/agent_provider_openrouter" }
agent_provider_groq                = { path = "agent-providers/agent_provider_groq" }
agent_provider_together            = { path = "agent-providers/agent_provider_together" }
agent_provider_mistral             = { path = "agent-providers/agent_provider_mistral" }
agent_provider_gemini              = { path = "agent-providers/agent_provider_gemini" }
agent_provider_docker_model_runner = { path = "agent-providers/agent_provider_docker_model_runner" }
agent_provider_ollama              = { path = "agent-providers/agent_provider_ollama" }
agent_provider_xai                 = { path = "agent-providers/agent_provider_xai" }
agent_provider_deepseek            = { path = "agent-providers/agent_provider_deepseek" }
agent_provider_fireworks           = { path = "agent-providers/agent_provider_fireworks" }
agent_provider_perplexity          = { path = "agent-providers/agent_provider_perplexity" }
agent_provider_lmstudio            = { path = "agent-providers/agent_provider_lmstudio" }
agent_provider_vllm                = { path = "agent-providers/agent_provider_vllm" }
agent_provider_llama_cpp           = { path = "agent-providers/agent_provider_llama_cpp" }
agent_provider_azure_openai        = { path = "agent-providers/agent_provider_azure_openai" }
agent_provider_aws_bedrock         = { path = "agent-providers/agent_provider_aws_bedrock" }
agent_provider_vertex_ai           = { path = "agent-providers/agent_provider_vertex_ai" }
agent_provider_cohere              = { path = "agent-providers/agent_provider_cohere" }

# ---------- Reflection System ----------
pulsar_reflection     = { path = "crates/pulsar_reflection" }
pulsar_events         = { path = "crates/pulsar_events" }
engine_class_derive   = { path = "crates/engine_class_derive" }

# ---------- Component Crates ----------
pulsar_physics        = { path = "crates/pulsar_physics" }
pulsar_rendering      = { path = "crates/pulsar_rendering" }
pulsar_scene          = { path = "crates/pulsar_scene" }

# ---------- UI Component Crates ----------
ui_core               = { path = "ui-crates/ui_core" }
ui_entry              = { path = "ui-crates/ui_entry" }
ui_level_editor       = { path = "ui-crates/ui_level_editor" }
ui_settings           = { path = "ui-crates/ui_settings" }
ui_multiplayer        = { path = "ui-crates/ui_multiplayer" }
ui_problems           = { path = "ui-crates/ui_problems" }
ui_flamegraph         = { path = "ui-crates/ui_flamegraph" }
ui_file_manager       = { path = "ui-crates/ui_file_manager" }
ui_common             = { path = "ui-crates/ui_common" }
ui_loading_screen     = { path = "ui-crates/ui_loading_screen" }
ui_about              = { path = "ui-crates/ui_about" }
ui_documentation      = { path = "ui-crates/ui_documentation" }
ui_types_common       = { path = "ui-crates/ui_types_common" }
ui_type_debugger      = { path = "ui-crates/ui_type_debugger" }
ui_plugin_manager     = { path = "ui-crates/ui_plugin_manager" }
ui_log_viewer         = { path = "ui-crates/ui_log_viewer" }
ui_git_manager        = { path = "ui-crates/ui_git_manager" }
ui_fab_search         = { path = "ui-crates/ui_fab_search" }

# ---------- Plugin System ----------
plugin_editor_api = { path = "crates/plugin_editor_api"}
plugin_manager    = { path = "crates/plugin_manager" }

# ---------- Helio Renderer (wgpu-based) ----------
helio          = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "f7e0a54b0e04ae9ca3f2f76dd3bbdb29185b8c9d" }
helio-snapshot = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "f7e0a54b0e04ae9ca3f2f76dd3bbdb29185b8c9d" }
glam           = { version = "0.33", features = ["bytemuck"] }

# ---------- PulsarConfig ----------
pulsar-config = { git = "https://github.com/Far-Beyond-Pulsar/PulsarConfig", rev = "78a332cc59e82db5dc4d7b26c920b0ac7a703102" }

# ---------- Installer ----------
# Local rustup fork used as a library to drive platform-native Rust installation.
# curl-backend disabled: reqwest-native-tls is sufficient and avoids the curl C dep.
rustup = { git = "https://github.com/tristanpoland/rustup", default-features = false, features = ["reqwest-native-tls"] }

# ---------- Third-party ----------
wgpu = { git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8" }
anyhow = "1.0.100"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.149"
schemars = "1.2.0"
smallvec = "1.15.1"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "bmp", "tga", "gif", "webp"] }
rust-i18n = "4.0.0"
raw-window-handle = "0.6.2"
winit = "0.30.12"
smol = "2.0.0"
tracing = "0.1.44"
notify = "8.2.0"
lsp-types = "0.97.0"
directories = "6.0.0"
itertools = "0.14.0"
rapier3d = { version = "0.32.0", features = ["simd-stable"] }
sysuri = "0.4.0"
urlencoding = "2.1.3"
ropey = { version = "=2.0.0-beta.1", features = ["metric_utf16", "metric_lines_lf"] }

###################################
# Windows-specific
###################################

windows = {version = "0.62.2",features = ["Wdk","Wdk_System","Wdk_System_SystemServices","Win32_System_Threading","Win32_System_SystemInformation","Win32_Graphics_Direct3D","Win32_Graphics_Direct3D_Fxc","Win32_Graphics_Direct3D11","Win32_Graphics_Direct3D12","Win32_Graphics_Dxgi","Win32_Graphics_Dxgi_Common","Win32_Foundation",]}
open = "5.0"
quote = "1.0"
rust-embed = { version = "8", features = ["interpolate-folder-path", "include-exclude"] }
crossbeam-channel = "0.5"
git2 = "0.21"
walkdir = "2.4"
rfd = "0.17"
thiserror = "2.0"
pulsar_reflection_derive = { path = "crates/pulsar_reflection_derive" }
dashmap = "6.1.0"
flume = "0.12"
futures = "0.3"
axum = { version = "0.8", features = ["ws", "macros"] }
parking_lot = "0.12"
syn = { version = "2.0", features = ["full", "extra-traits"] }
pbgc = { git = "https://github.com/Far-Beyond-Pulsar/PBGC", rev = "2e627b0d36d764ef6d2002c1c176e83776dbf735" }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "=3.27.0"
base64 = "0.22"
linkme = "0.3"
tool_registry_macros = { git = "https://github.com/Far-Beyond-Pulsar/ToolbeltRS", rev = "116b9028bad6b9467073de2534be60ef4df9b279" }
tracing-subscriber = "=0.3.23"
rand = "0.10"
core-foundation-sys = "0.8"
libloading = "0.9"
uuid = { version = "1.4", features = ["v4"] }
helio-asset-compat = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "f7e0a54b0e04ae9ca3f2f76dd3bbdb29185b8c9d" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.11"
dirs = "6.0"
winapi = { version = "0.3", features = ["winuser"] }
ui_gen_macros = { path = "crates/ui_gen_macros" }
pulsar_macros = { path = "crates/pulsar_macros" }
once_cell = "1.20"
tower-http = { version = "0.6", features = ["cors", "trace"] }
lazy_static = "1.4"
toml = "1.0"
proc-macro2 = "1.0"
regex = "1"
pulsar_bp_executor = { path = "crates/pulsar_bp_executor" }
similar = "3"
quinn = "0.11"
tool_registry = { git = "https://github.com/Far-Beyond-Pulsar/ToolbeltRS", rev = "116b9028bad6b9467073de2534be60ef4df9b279" }
graphy = { git = "https://github.com/Far-Beyond-Pulsar/Graphy", rev = "d18837c13dd3e1cf6076d9a3c64c450971a6d1af" }
rusqlite = { version = "0.32", features = ["bundled"] }
pulsar_std_bundle = { path = "crates/pulsar_std_bundle" }

###################################
# Clippy Lints
###################################

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
manual_is_multiple_of = "allow"
type_complexity = "allow"
todo = "deny"
style = { level = "allow", priority = -1 }

###################################
# Typos
###################################

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]

###################################
# Patch: force ALL git refs to Pulsar-Native to use local crates.
# External deps (pbgc, Plugin_Blueprints) pull Pulsar-Native crates
# from git revs. Without patching, Cargo compiles a second copy of
# every crate, causing duplicate linkme slices and trait mismatches.
###################################

[patch."https://github.com/Far-Beyond-Pulsar/Pulsar-Native"]
# Core engine crates
ui                    = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI-Component", rev = "0493afe2c9e509d0cbb5d043ed69202ef6c601a5" }
pulsar_std            = { path = "crates/pulsar_std" }
pulsar_reflection     = { path = "crates/pulsar_reflection" }
engine_backend        = { path = "crates/engine_backend" }
plugin_editor_api     = { path = "crates/plugin_editor_api" }
plugin_manager        = { path = "crates/plugin_manager" }
window_manager        = { path = "crates/window_manager" }
engine_state          = { path = "crates/engine_state" }
engine_fs             = { path = "crates/engine_fs" }
profiling             = { path = "crates/profiling" }
type_db               = { path = "crates/type_db" }
pulsar_settings       = { path = "crates/pulsar_settings" }
pulsar_diagnostics    = { path = "crates/pulsar_diagnostics" }
pulsar_lsp            = { path = "crates/pulsar_lsp" }
blueprint_compiler    = { path = "crates/blueprint_compiler" }
pulsar_graph          = { path = "crates/pulsar_graph" }
pulsar_replication    = { path = "crates/pulsar_replication" }
pulsar_bp_executor    = { path = "crates/pulsar_bp_executor" }
pulsar_std_bundle     = { path = "crates/pulsar_std_bundle" }
gpui-component-macros = { path = "crates/macros" }
# UI crates referenced by core crates
ui_common             = { path = "ui-crates/ui_common" }
ui_types_common       = { path = "ui-crates/ui_types_common" }

[patch."https://github.com/Far-Beyond-Pulsar/Plugin_Blueprints"]
plugin_editor_api     = { path = "crates/plugin_editor_api" }
ui                    = { path = "../WGPUI-Component/crates/ui" }
ui_common             = { path = "ui-crates/ui_common" }
ui_types_common       = { path = "ui-crates/ui_types_common" }
pulsar_std            = { path = "crates/pulsar_std" }
pulsar_reflection     = { path = "crates/pulsar_reflection" }
engine_backend        = { path = "crates/engine_backend" }
window_manager        = { path = "crates/window_manager" }
engine_state          = { path = "crates/engine_state" }
engine_fs             = { path = "crates/engine_fs" }
pulsar_bp_executor    = { path = "crates/pulsar_bp_executor" }
pulsar_std_bundle     = { path = "crates/pulsar_std_bundle" }

[patch.crates-io]
profiling             = { path = "crates/profiling" }
type_db               = { path = "crates/type_db" }
pulsar_settings       = { path = "crates/pulsar_settings" }
pulsar_diagnostics    = { path = "crates/pulsar_diagnostics" }
pulsar_lsp            = { path = "crates/pulsar_lsp" }
blueprint_compiler    = { path = "crates/blueprint_compiler" }
pulsar_graph          = { path = "crates/pulsar_graph" }
pulsar_replication    = { path = "crates/pulsar_replication" }
gpui-component-macros = { path = "crates/macros" }

[patch."https://github.com/Far-Beyond-Pulsar/Plugin_CodeEditor"]
plugin_editor_api     = { path = "crates/plugin_editor_api" }
ui                    = { path = "../WGPUI-Component/crates/ui" }
ui_common             = { path = "ui-crates/ui_common" }
ui_types_common       = { path = "ui-crates/ui_types_common" }
pulsar_std            = { path = "crates/pulsar_std" }
engine_backend        = { path = "crates/engine_backend" }
window_manager        = { path = "crates/window_manager" }
engine_state          = { path = "crates/engine_state" }
engine_fs             = { path = "crates/engine_fs" }
profiling             = { path = "crates/profiling" }
type_db               = { path = "crates/type_db" }
pulsar_settings       = { path = "crates/pulsar_settings" }
pulsar_diagnostics    = { path = "crates/pulsar_diagnostics" }
pulsar_lsp            = { path = "crates/pulsar_lsp" }
blueprint_compiler    = { path = "crates/blueprint_compiler" }
pulsar_graph          = { path = "crates/pulsar_graph" }
pulsar_replication    = { path = "crates/pulsar_replication" }
gpui-component-macros = { path = "crates/macros" }
