[workspace]
members = [
    "crates/core/*",
    "crates/editor/*",
    "crates/subsystems/*",
    "crates/agent-providers/*",
]

default-members = ["crates/core/engine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anomalyco/Pulsar-Native"
rust-version = "1.81"
authors = ["Tristan J. Poland"]
homepage = "https://github.com/anomalyco/Pulsar-Native"
keywords = ["game-engine", "editor"]

###################################
# Profiles
###################################

[profile.release]
# Hardened release profile:
# - debug=false:          no debug symbols embedded in release binary
# - strip="symbols":      strip all symbol names (function/struct names)
# - lto="fat":            link-time optimization (faster binary, harder to RE)
# - codegen-units=1:      better LLVM optimization across crate boundaries
# - panic="abort":        abort on panic instead of unwinding (smaller, faster)
# debug = false
# strip = "symbols"
# lto = "fat"
# codegen-units = 1
# panic = "abort"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

###################################
# Workspace Dependencies
###################################

[workspace.dependencies]

# ---------- GPUI (vendored) ----------
gpui-ce      = { path = "crates/ui/wgpui", features = ["inspector"] }
ui           = { path = "crates/ui/wgpui-component/crates/ui" }
ui-macros    = { path = "crates/ui/wgpui-component/crates/ui-macros" }

# ---------- Core Engine ----------
profiling                          = { path = "crates/core/profiling" }
engine_fs                          = { path = "crates/core/engine_fs" }
pulsar_std                         = { path = "crates/core/pulsar_std" }
engine_state                       = { path = "crates/core/engine_state" }
engine_subsystems                  = { path = "crates/subsystems/engine_subsystems" }
pulsar_auth                        = { path = "crates/core/pulsar_auth" }
pulsar_settings                    = { path = "crates/core/pulsar_settings" }
engine_backend                     = { path = "crates/core/engine_backend" }
pulsar_lsp                         = { path = "crates/core/pulsar_lsp" }
window_manager                     = { path = "crates/core/window_manager" }
pulsar_game                        = { path = "crates/core/pulsar_game" }
pulsar_core                        = { path = "crates/core/pulsar_core" }
pulsar_ecs                         = { path = "crates/core/pulsar_ecs" }
pulsar_scenedb                     = { path = "crates/core/pulsar_scenedb" }
pulsar_reflection                  = { path = "crates/core/pulsar_reflection" }
pulsar_events                      = { path = "crates/core/pulsar_events" }
engine_class_derive                = { path = "crates/core/engine_class_derive" }
pulsar_scene                       = { path = "crates/subsystems/pulsar_scene" }

# ---------- Agent Providers ----------
agent_chat_core                    = { path = "crates/agent-providers/agent_chat_core" }
agent_chat_tools                   = { path = "crates/agent-providers/agent_chat_tools" }
agent_provider_demo_random         = { path = "crates/agent-providers/agent_provider_demo_random" }
agent_provider_github_copilot      = { path = "crates/agent-providers/agent_provider_github_copilot" }
agent_provider_openai              = { path = "crates/agent-providers/agent_provider_openai" }
agent_provider_opencode            = { path = "crates/agent-providers/agent_provider_opencode" }
agent_provider_anthropic           = { path = "crates/agent-providers/agent_provider_anthropic" }
agent_provider_gemini              = { path = "crates/agent-providers/agent_provider_gemini" }
agent_provider_docker_model_runner = { path = "crates/agent-providers/agent_provider_docker_model_runner" }
agent_provider_azure_openai        = { path = "crates/agent-providers/agent_provider_azure_openai" }
agent_provider_aws_bedrock         = { path = "crates/agent-providers/agent_provider_aws_bedrock" }
agent_provider_vertex_ai           = { path = "crates/agent-providers/agent_provider_vertex_ai" }
agent_provider_cohere              = { path = "crates/agent-providers/agent_provider_cohere" }

# ---------- Subsystem Crates ----------
pulsar_physics        = { path = "crates/subsystems/pulsar_physics" }
pulsar_rendering      = { path = "crates/subsystems/pulsar_rendering" }


# ---------- Editor Crates ----------
ui_core               = { path = "crates/editor/ui_core" }
ui_entry              = { path = "crates/editor/ui_entry" }
ui_level_editor       = { path = "crates/editor/ui_level_editor" }
ui_settings           = { path = "crates/editor/ui_settings" }
ui_multiplayer        = { path = "crates/editor/ui_multiplayer" }
ui_problems           = { path = "crates/editor/ui_problems" }
ui_flamegraph         = { path = "crates/editor/ui_flamegraph" }
ui_file_manager       = { path = "crates/editor/ui_file_manager" }
ui_common             = { path = "crates/editor/ui_common" }
ui_loading_screen     = { path = "crates/editor/ui_loading_screen" }
ui_about              = { path = "crates/editor/ui_about" }
ui_documentation      = { path = "crates/editor/ui_documentation" }
ui_types_common       = { path = "crates/editor/ui_types_common" }
ui_type_debugger      = { path = "crates/editor/ui_type_debugger" }
ui_plugin_manager     = { path = "crates/editor/ui_plugin_manager" }
ui_log_viewer         = { path = "crates/editor/ui_log_viewer" }
ui_git_manager        = { path = "crates/editor/ui_git_manager" }
ui_fab_search         = { path = "crates/editor/ui_fab_search" }
ui_multiuser_status   = { path = "crates/editor/ui_multiuser_status" }
ui_friends            = { path = "crates/editor/ui_friends" }
friends_engine        = { path = "crates/core/friends_engine" }

# ---------- Plugin System ----------
plugin_editor_api     = { path = "crates/core/plugin_editor_api"}
plugin_manager        = { path = "crates/core/plugin_manager" }

# ---------- Helio Renderer (external git dep) ----------
helio                 = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "b88e366d6a6792e34d5b9c7afd1a197a78c54747" }
helio-snapshot        = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "b88e366d6a6792e34d5b9c7afd1a197a78c54747" }
helio-asset-compat    = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "b88e366d6a6792e34d5b9c7afd1a197a78c54747" }
glam                  = { version = "0.33", features = ["bytemuck"] }

# ---------- Third-party (vendored) ----------
pulsar-config         = { path = "crates/third-party/pulsar-config" }
pbgc                  = { path = "crates/third-party/pbgc" }
graphy                = { path = "crates/third-party/graphy" }
tool_registry         = { git = "https://github.com/Far-Beyond-Pulsar/ToolbeltRS", rev = "116b9028bad6b9467073de2534be60ef4df9b279" }
tool_registry_macros  = { git = "https://github.com/Far-Beyond-Pulsar/ToolbeltRS", rev = "116b9028bad6b9467073de2534be60ef4df9b279" }

# ---------- Installer ----------
rustup = { git = "https://github.com/tristanpoland/rustup", default-features = false, features = ["reqwest-native-tls"] }

# ---------- Graphics (external git dep; wgpu is a workspace, not vendored) ----------
wgpu = { git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8" }

# ---------- crates.io ----------
anyhow = "1.0.100"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.149"
schemars = "1.2.0"
smallvec = "1.15.1"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "bmp", "tga", "gif", "webp"] }
rust-i18n = "4.0.0"
raw-window-handle = "0.6.2"
winit = "0.30.12"
smol = "2.0.0"
event-listener = "5.4"
tracing = "0.1.44"
notify = "8.2.0"
lsp-types = "0.97.0"
directories = "6.0.0"
itertools = "0.15.0"
rapier3d = { version = "0.34.0", features = ["simd-stable"] }
sysuri = "0.4.0"
urlencoding = "2.1.3"
ropey = { version = "=2.0.0-beta.1", features = ["metric_utf16", "metric_lines_lf"] }

###################################
# Windows-specific
###################################

windows = {version = "0.62.2",features = ["Wdk","Wdk_System","Wdk_System_SystemServices","Win32_System_Threading","Win32_System_SystemInformation","Win32_Graphics_Direct3D","Win32_Graphics_Direct3D_Fxc","Win32_Graphics_Direct3D11","Win32_Graphics_Direct3D12","Win32_Graphics_Dxgi","Win32_Graphics_Dxgi_Common","Win32_Foundation",]}
open = "5.0"
quote = "1.0"
rust-embed = { version = "8", features = ["interpolate-folder-path", "include-exclude"] }
crossbeam-channel = "0.5"
git2 = "0.21"
walkdir = "2.4"
rfd = "0.17"
thiserror = "2.0"
pulsar_reflection_derive = { path = "crates/core/pulsar_reflection_derive" }
dashmap = "6.1.0"
inventory = "0.3"
flume = "0.12"
futures = "0.3"
axum = { version = "0.8", features = ["ws", "macros"] }
parking_lot = "0.12"
syn = { version = "2.0", features = ["full", "extra-traits"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "=3.27.0"
base64 = "0.22"
linkme = "0.3"
tracing-subscriber = "=0.3.23"
rand = "0.10"
core-foundation-sys = "0.8"
libloading = "0.9"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.11"
dirs = "6.0"
winapi = { version = "0.3", features = ["winuser"] }
ui_gen_macros = { path = "crates/core/ui_gen_macros" }
pulsar_macros = { path = "crates/core/pulsar_macros" }
pulsar-multiplayer-core = { path = "crates/core/pulsar-multiplayer-core" }
once_cell = "1.20"
tower-http = { version = "0.7", features = ["cors", "trace"] }
lazy_static = "1.4"
toml = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1"
pulsar_bp_executor = { path = "crates/core/pulsar_bp_executor" }
similar = "3"
quinn = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
pulsar_std_bundle = { path = "crates/core/pulsar_std_bundle" }

###################################
# Clippy Lints
###################################

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
manual_is_multiple_of = "allow"
type_complexity = "allow"
todo = "deny"
style = { level = "allow", priority = -1 }

###################################
# Typos
###################################

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]

###################################
# Patch: redirect external git deps
# to local vendored copies so Cargo
# resolves a single copy in-tree.
#
# External deps (plugin repos, PBGC,
# Graphy, etc.) reference Pulsar-Native
# crates via git. Without patching,
# Cargo compiles duplicate copies.
###################################

[patch."https://github.com/Far-Beyond-Pulsar/WGPUI"]
gpui-ce = { path = "crates/ui/wgpui" }

[patch."https://github.com/Far-Beyond-Pulsar/Pulsar-Native"]
pulsar_std        = { path = "crates/core/pulsar_std" }
plugin_editor_api = { path = "crates/core/plugin_editor_api" }
ui_common         = { path = "crates/editor/ui_common" }
engine_backend    = { path = "crates/core/engine_backend" }
engine_state      = { path = "crates/core/engine_state" }
pulsar_reflection = { path = "crates/core/pulsar_reflection" }
pulsar_std_bundle = { path = "crates/core/pulsar_std_bundle" }
pulsar_bp_executor = { path = "crates/core/pulsar_bp_executor" }

[patch."https://github.com/Far-Beyond-Pulsar/PBGC"]
pbgc = { path = "crates/third-party/pbgc" }

[patch."https://github.com/Far-Beyond-Pulsar/Graphy"]
graphy = { path = "crates/third-party/graphy" }

[patch."https://github.com/Far-Beyond-Pulsar/PulsarConfig"]
pulsar-config = { path = "crates/third-party/pulsar-config" }

[patch."https://github.com/Far-Beyond-Pulsar/WGPUI-Component"]
ui = { path = "crates/ui/wgpui-component/crates/ui" }
ui-macros = { path = "crates/ui/wgpui-component/crates/ui-macros" }

[patch."https://github.com/Far-Beyond-Pulsar/ToolbeltRS"]
tool_registry = { path = "crates/third-party/toolbelt/crates/tool_registry" }
tool_registry_macros = { path = "crates/third-party/toolbelt/crates/tool_registry_macros" }

[patch."https://github.com/Far-Beyond-Pulsar/PSGC"]
psgc = { path = "crates/third-party/psgc/crates/psgc" }
wgsl_std = { path = "crates/third-party/psgc/crates/wgsl_std" }
