[package]
name = "agent_chat_tools"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
serde_json = "1"
engine_fs = { path = "../../crates/engine_fs" }
plugin_manager = { path = "../../crates/plugin_manager" }
tool_registry = { git = "https://github.com/Far-Beyond-Pulsar/ToolbeltRS", rev = "0b4c70232e0ef10a29e2b3a1daf1b7cbdfdba5aa" }
tool_registry_builtin = { git = "https://github.com/Far-Beyond-Pulsar/ToolbeltRS", rev = "0b4c70232e0ef10a29e2b3a1daf1b7cbdfdba5aa" }
tool_registry_macros = { git = "https://github.com/Far-Beyond-Pulsar/ToolbeltRS", rev = "0b4c70232e0ef10a29e2b3a1daf1b7cbdfdba5aa" }
