[package]
name = "agent_provider_ollama"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
agent_chat_core = { path = "../agent_chat_core" }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
