[package]
name = "blueprint_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Team"]
description = "Blueprint graph compiler for Pulsar - integrates PBGC with the engine"
license = "MIT"

[dependencies]
# Core Blueprint compiler (from PBGC repo)
pbgc = { git = "https://github.com/Far-Beyond-Pulsar/PBGC", rev = "4ef8298edc447d88f6f84cece340fe508f17a906" }

# Also need direct access to Graphy for traits
graphy = { git = "https://github.com/Far-Beyond-Pulsar/Graphy", rev = "74a993fe51efc00ac5e208af74a3df79f2c0ba47" }

# Editor's native graph type — so we can read graph_save.json files directly.
pulsar_graph = { path = "../pulsar_graph" }

# JSON parsing for graph_save.json files.
serde_json = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
