[package]
name = "blueprint_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Team"]
description = "Blueprint graph compiler for Pulsar - integrates PBGC with the engine"
license = "MIT"

[dependencies]
# Core Blueprint compiler (local PBGC checkout)
pbgc = { workspace = true }

# Also need direct access to Graphy for traits
graphy = { workspace = true }

# Editor's native graph type — so we can read graph_save.json files directly.
pulsar_graph = { workspace = true }

# JSON parsing for graph_save.json files.
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
