[package]
name = "dtrace_profiler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Diagnostics_Etw",
    "Win32_Foundation",
] }

[build-dependencies]
cc = "1.0"

[lib]
name = "dtrace_profiler"
path = "src/lib.rs"
