[package]
edition = "2021"
name = "pulsar_engine"
description = "A modern high-performance game engine written in Rust"
publish = false
version = "0.1.105"

[[bin]]
name = "pulsar_engine"
path = "src/main.rs"

[dependencies]
# horizon.workspace = true
anyhow.workspace = true
gpui.workspace = true
ui = { workspace = true, features = ["tree-sitter-languages"] }
winit.workspace = true
raw-window-handle.workspace = true
thiserror = "2.0"
image = "0.25"  # For loading window icon

# Engine crates
engine_backend.workspace = true
engine_state.workspace = true

# Profiling - instrumentation-based
profiling = { path = "../profiling" }

# UI crates - commented out to avoid circular dependency during build
# The UI crates depend on engine, so we can't have engine depend on them
# Instead, engine will link against them at runtime
ui_core.workspace = true
ui_common.workspace = true
ui_entry.workspace = true
# ui_daw_editor.workspace = true
ui_settings.workspace = true
ui_loading_screen.workspace = true
ui_about.workspace = true
ui_documentation.workspace = true
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rust-embed = { version = "6", features = ["interpolate-folder-path", "include-exclude"] }
tokio = { version = "1", features = ["full"] }
windows.workspace = true
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
toml = "0.8"
parking_lot = "0.12"
sysuri.workspace = true
urlencoding.workspace = true
dotenv = "0.15"
pulsar_std = { path = "../pulsar_std" }
tracing-appender = "0.2.4"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
